--- a/Readme.Rmd
+++ b/Readme.Rmd
@@ -11,7 +11,7 @@ Repo utilizado para elaborar el trabajo en equipo para la asignatura "Programaci
 <!-- El párrafo de arriba has de dejarlo tal cual. No has de cambiar nada!!-->
 
 <!-- En la linea de abajo has de sustituir "perezp44" por tu usuario de Github-->
-La versión final del trabajo puede visualizarse en: <https://github.com/Miguercios/trabajo_BigData_equipo>. 
+La versión final del trabajo puede visualizarse en: <https://miguercios.github.io/trabajo_BigData_equipo/>. 
 
 
 <!-- Abajo podéis escribir lo que queráis, igual un resumen del trabajo, o ..., o ... pero al menos, tenéis que poner el título del trabajo y el nombre de los componentes del equipo-->
